cloud-infra-macros/tests/fails/timeout_too_high.rs
use cloud_infra_macros::timeout;

fn example() {
    let t = timeout!(1000);
}

fn main() {}