cloud-infra-macros/tests/fails/timeout_too_high.stderr
error: value should be at most 900
 --> tests/fails/timeout_too_high.rs:4:22
  |
4 |     let t = timeout!(1000);
  |                      ^^^^
